# firestore-structured-query

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
src/: error.rs  field_path.rs  filter.rs  lib.rs  order.rs  query.rs  value.rs
tests/: lib.rs  v0_10_0.rs  v0_1_0.rs  v0_2_0.rs  v0_3_0.rs  v0_4_0.rs  v0_5_0.rs  v0_5_1.rs  v0_6_0.rs  v0_6_1.rs  v0_8_0.rs  v0_8_2.rs  v0_9_0.rs
