[package]
name = "firestore-structured-query"
version = "0.9.3"
edition = "2021"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A Firestore StructuredQuery builder"
exclude = [".github", "docs"]
keywords = ["firestore", "gcloud", "google", "structured-query"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/firestore-structured-query"

[dependencies]
google-api-proto = { version = "1.557", features = ["google-firestore-v1"] }
serde = { version = "1", features = ["derive"], optional = true }
serde-firestore-value = { version = "0.7.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde-firestore-value"]

[lints.rust]
missing_docs = "deny"
